Fix bug 1189856 - fix overflowing text on mobile release notes

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -444,11 +444,14 @@ article {
         margin: @baseLine 10px;
     }
 
-    .section-items {
+    .section-items.tagged {
         > li {
             padding-left: 0;
+            display: block;
+            word-wrap: break-word;
+            width: auto;
             span {
-                word-break: break-all;
+                word-wrap: break-word;
             }
         }
 
